--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,28 +2,25 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
-html {
-  --scrollbarBG: #cfd8dc;
-  --thumbBG: #90a4ae;
+::-webkit-scrollbar {
+  width: 4px;
 }
-*::-webkit-scrollbar {
-  width: 1px;
+::-webkit-scrollbar-thumb {
+  background: -webkit-linear-gradient(#00000000, #89a9df, #00000000);
 }
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+/* Firefox */
+::-moz-scrollbar-thumb {
+  background: -webkit-linear-gradient(#00000000, #89a9df, #00000000);
 }
-*::-webkit-scrollbar-track {
-  background: var(--scrollbarBG);
+/* IE and Edge */
+*::-ms-scrollbar-thumb {
+  background: -webkit-linear-gradient(#00000000, #89a9df, #00000000);
 }
-*::-webkit-scrollbar-thumb {
-  background-color: var(--thumbBG);
-  border-radius: 6px;
-  border: 3px solid var(--scrollbarBG);
+*::-ms-scrollbar {
+  -ms-overflow-style: none;
 }
-
 * {
   box-sizing: border-box;
 }
